# zym

./: .gitignore  CMakeLists.txt  README.md
include/: search.h
src/: exact_cpu.cpp  exact_gpu.cu  file_utils.cpp  fuzzy_cpu.cpp  fuzzy_gpu.cu
tools/: benchmark.cpp  zym.cpp
